2009-09-03  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Components.DockToolbars/DockToolbar.cs:
	* MonoDevelop.Components.DockToolbars/DockToolbarPanel.cs:
	  Detect changes in the size of custom controls in the
	  toolbar, and reposition the toolbars accordingly. Fixes bug
	  #500926 - Toolbar docking shows wrong tooltips.

2009-09-02  Lluis Sanchez Gual  <lluis@novell.com>

	* ChangeLog: Forgot to attribute the patch.

2009-09-02  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/objects.xml:
	* MonoDevelop.Components/ListView.cs: Add support for
	  multi-selection. Patch by Zach Lute.

	* MonoDevelop.Components.Commands/CommandMenuItem.cs: Don't
	  try to execute a command when an item that shows a submenu
	  is activated.

	* MonoDevelop.Components.Commands/CommandManager.cs: Avoid
	  infinite loops in the command target chain.

2009-08-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components/TabLabel.cs:
	* MonoDevelop.Components.Commands/CommandEntry.cs:
	* MonoDevelop.Components.PropertyGrid/PropertyGrid.cs:
	* MonoDevelop.Components.Commands/CommandToolButton.cs:
	* MonoDevelop.Components.PropertyGrid.Editors/FlagsEditorCell.cs:
	* MonoDevelop.Components.PropertyGrid.Editors/EnumerationEditorCell.cs:
	  Fixed tooltip releated warnings.

2009-08-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components.Commands/CommandEntrySet.cs: Fixed
	  bug with auto hide menus.

2009-08-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components.Commands/CommandMenu.cs:
	* MonoDevelop.Components.Commands/CommandManager.cs:
	* MonoDevelop.Components.Commands/CommandEntrySet.cs: Command
	  menus are now created on demand.

2009-08-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components.Commands/CommandRouterContainer.cs:
	  Added support for lazy command router container.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic: Update gtk# dependency.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>
